<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ForgetPasswordActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_back"
                android:background="#00000000"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/forger_forget"
                android:textSize="36sp"
                android:textColor="@color/orange"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_desc"
                android:fontFamily="@font/futura_book"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forget_enter_phone"
                app:prefixText="+84 "
                app:prefixTextAppearance="@style/prefixText"
                android:textColorHint="@color/black"
                app:startIconDrawable="@drawable/ic_account_phone"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/futura_book"
                    android:inputType="phone"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSendOtp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/forget_send_otp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/bg_button_orange"
            android:onClick="toPhoneOtp"/>
    </LinearLayout>

</ScrollView>
