<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PhoneOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_gravity="fill">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_close"
                android:background="#00000000"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/phoneotp_phoneotp"
                android:textSize="36sp"
                android:textColor="@color/orange"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phoneotp_guide"
                android:fontFamily="@font/futura_book"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"/>
            <com.chaos.view.PinView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:itemCount="4"
                app:itemHeight="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:itemBackground="@color/lightorange"
                android:cursorVisible="true"
                app:hideLineWhenFilled="true"
                app:cursorColor="@color/black"
                android:inputType="number"
                style="@style/PinWidget.PinView"
                app:lineColor="@color/grey"
                app:itemRadius="5dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/phoneotp_confirm"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</ScrollView>